# pypas-doc

./: .gitignore  Dockerfile  README.md  hooks.py  justfile  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: custom.css  index.md
docs/static/css/: custom.css
docs/static/js/: custom.js
