[project]
name = "pypas-doc"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "i18n>=0.2",
    "markdown-callouts>=0.4.0",
    "mdx-gh-links>=0.4",
    "mkdocs>=1.6.1",
    "mkdocs-minify-plugin>=0.8.0",
    "pymdown-extensions>=10.16.1",
    "requests>=2.32.4",
]

[dependency-groups]
dev = [
    "ipython>=9.4.0",
    "pytest>=8.4.1",
]

prod = []
